--- a/VolvoCaminhoes.Domain/Resources/Mensagens.resx
+++ b/VolvoCaminhoes.Domain/Resources/Mensagens.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ERRO_ANO_FABRICACAO_INVALIDO" xml:space="preserve">
+    <value>O ano de fabricação deve ser o atual.</value>
+  </data>
+  <data name="ERRO_ANO_MODELO_INVALIDO" xml:space="preserve">
+    <value>O ano do modelo deve ser o atual ou subsequente.</value>
+  </data>
   <data name="ERRO_MODELO_NAO_INFORMADO" xml:space="preserve">
     <value>O modelo não foi informado.</value>
   </data>
